--- a/arches/small_core.yaml
+++ b/arches/small_core.yaml
@@ -16,21 +16,38 @@ top.cpu.core0.extension.core_extensions:
     [["alu", "1"],
      ["fpu", "1"],
      ["br",  "1"]]
+  pipe_topology_alu_pipes:
+    [["int", "mul", "i2f", "cmov", "div"]]
+  pipe_topology_br_pipes:
+    [["br"]]
+  pipe_topology_fpu_pipes:
+    [["float", "faddsub", "fmac", "f2i"]]
+      # 6 alu issue queues
+  issue_queue_topology:
+    [["alu0"],
+     ["fpu0"],
+     ["br0"]]
 
 top.cpu.core0.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0", "lsu"],   # <-- TO
-     ["alu0",    "1",    "1",   "1",   "1"],
-     ["fpu0",    "1",    "1",   "1",   "1"],
-     ["br0",     "1",    "1",   "1",   "1"],
-     ["lsu",     "1",    "1",   "1",   "1"]]
+    [["",     "alu0", "fpu0", "br0", "lsu", "iq0", "iq1", "iq2"],   # <-- TO
+     ["alu0",    "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["fpu0",    "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["br0",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["lsu",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["iq0",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["iq1",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["iq2",     "1",    "1",   "1",   "1",   "1",   "1",   "1"]]
 
   float.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0", "lsu"],   # <-- TO
-     ["alu0",    "1",    "1",   "1",   "1"],
-     ["fpu0",    "1",    "1",   "1",   "1"],
-     ["br0",     "1",    "1",   "1",   "1"],
-     ["lsu",     "1",    "1",   "1",   "1"]]
+    [["",     "alu0", "fpu0", "br0", "lsu", "iq0", "iq1", "iq2"],   # <-- TO
+     ["alu0",    "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["fpu0",    "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["br0",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["lsu",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["iq0",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["iq1",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
+     ["iq2",     "1",    "1",   "1",   "1",   "1",   "1",   "1"]]
