refactor,special field support, basic dsl parser
refactor long testbench file

Added special field extract method, fieldextractor test

FSL: domain language has a name, fusion script (or spec) language
Add fsl grammar and lexer, fsl.l/.y
Add symbol table support
Added syntax check tests

Local copies of json and test files

Reapplied clang-format

--- a/fusion/CMakeLists.txt
+++ b/fusion/CMakeLists.txt
@@ -2,9 +2,11 @@ cmake_minimum_required(VERSION 3.17)
 project(FusionProject)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(FUSION_TOP ${CMAKE_SOURCE_DIR})
 
-# Add subdirectories
+# Add subdirectories in dependent order
 add_subdirectory(fusion)
+add_subdirectory(dsl)
 add_subdirectory(test)
 
 # Check if Doxygen is installed
