Redesign to more generic execution units

--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -1,5 +1,5 @@
 #
-# Set up the pipeline for a 8-wide machine
+# Set up the pipeline for a 8_wide machine
 #
 
 # Build on top of a medium core
@@ -17,73 +17,68 @@ top.cpu.core0:
     l1_size_kb: 64
 
 top.cpu.core0.extension.core_extensions:
-  execution_topology:
-    [["alu", "6"],
-    ["fpu", "2"],
-    ["br",  "2"]]
-  # this defines what pipe types are assigned to which execution unit
-  pipe_topology_alu_pipes:
-    [["int"], # alu0
-      ["int", "div"], # alu1
-      ["int", "mul"],
-      ["int", "mul", "i2f", "cmov"],
-      ["int"],
-      ["int"]]
-  pipe_topology_br_pipes:
-    [["br"],
-     ["br"]]
-  pipe_topology_fpu_pipes:
-    [["float", "faddsub", "fmac"], 
-     ["float", "f2i"]]
-  # this defines which execution units are mapped to which issue queue
-  issue_queue_topology:
-    [["alu0"],
-     ["alu1", "alu2"],
-     ["alu3", "alu4", "alu5"],
-     ["fpu0", "fpu1"],
-     ["br0", "br1"]]
-
+  # this sets the pipe targets for each execution unit
+  # you can set a multiple or just one:
+  # ["int", "div"] would mean this execution pipe can accept
+  # targets of: "int" and "div"
+  pipelines:
+  [
+    ["int"], # exe0
+    ["int", "div"], # exe1
+    ["int", "mul"], # exe2
+    ["int", "mul", "i2f", "cmov"], # exe3
+    ["int"], # exe4
+    ["int"], # exe5
+    ["float", "faddsub", "fmac"], # exe6
+    ["float", "f2i"], # exe7
+    ["br"], # exe8
+    ["br"] # exe9
+  ]
+  # this is used to set how many units per queue
+  # ["0", "1"] means iq0 has exe0 and exe1, so it's inclusive
+  # if you want just one execution unit to issue queue you can do:
+  # ["0"] which would result in iq0 -> exe0
+  # *note if you change the number of issue queues, 
+  # you need to add it to latency matrix below
+  issue_queue_to_pipe_map:
+  [ 
+    ["0", "1"], # iq0 -> exe0, exe1
+    ["2", "3"], # iq1 -> exe2, exe3
+    ["4", "5"], # iq2
+    ["6", "7"], # iq3
+    ["8", "9"]  # iq4
+  ]
+  # optional if you want to set an alias for each exe* unit
+  exe_pipe_alias:
+  [
+    ["exe0", "alu0"],
+    ["exe1", "alu1"],
+    ["exe2", "alu2"],
+    ["exe3", "alu3"],
+    ["exe4", "alu4"],
+    ["exe5", "alu5"],
+    ["exe6", "fpu0"],
+    ["exe7", "fpu1"],
+    ["exe8", "br0"],
+    ["exe9", "br1"],
+  ]
 top.cpu.core0.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",      "alu0", "alu1", "alu2", "alu3", "alu4", "alu5", "fpu0", "fpu1", "br0",  "br1",  "lsu",  "iq0",  "iq1",  "iq2",  "iq3", "iq4"],
-    ["alu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu2",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu3",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu4",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu5",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["fpu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["fpu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["br0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["br1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["lsu",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq2",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq3",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq4",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"]]
-
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",      "alu0", "alu1", "alu2", "alu3", "alu4", "alu5", "fpu0", "fpu1", "br0",  "br1",  "lsu",  "iq0",  "iq1",  "iq2",  "iq3", "iq4"],
-    ["alu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu2",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu3",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu4",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu5",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["fpu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["fpu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["br0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["br1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["lsu",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq2",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq3",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq4",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"]]
-
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1]]
