--- a/test/core/dispatch/test_cores/test_big_core.yaml
+++ b/test/core/dispatch/test_cores/test_big_core.yaml
@@ -2,71 +2,44 @@
 # Set up the pipeline for a 8-wide machine
 #
 top.extension.core_extensions:
-  execution_topology:
-    [["alu", "6"],
-    ["fpu", "2"],
-    ["br",  "2"]]
-  pipe_topology_alu_pipes:
-    [["int"], # alu0
-      ["int", "div"], # alu1
-      ["int", "mul"],
-      ["int", "mul", "i2f", "cmov"],
-      ["int"],
-      ["int"]]
-  pipe_topology_br_pipes:
-    [["br"],
-     ["br"]]
-  pipe_topology_fpu_pipes:
-    [["float", "faddsub", "fmac"], 
-     ["float", "f2i"]]
-  issue_queue_topology:
-    [["alu0"],
-     ["alu1", "alu2"],
-     ["alu3", "alu4", "alu5"],
-     ["fpu0", "fpu1"],
-     ["br0", "br1"]]
-
+  pipelines:
+  [
+    ["int"], # alu0
+    ["int", "div"], # alu1
+    ["int", "mul"],
+    ["int", "mul", "i2f", "cmov"],
+    ["int"],
+    ["int"],
+    ["float", "faddsub", "fmac"], 
+    ["float", "f2i"],
+    ["br"],
+    ["br"]
+  ]
+  issue_queue_to_pipe_map:
+  [ 
+    ["0", "1"],
+    ["2", "3"],
+    ["4", "5"],
+    ["6", "7"],
+    ["8", "9"]
+  ]
 top.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",      "alu0", "alu1", "alu2", "alu3", "alu4", "alu5", "fpu0", "fpu1", "br0",  "br1",  "lsu",  "iq0",  "iq1",  "iq2",  "iq3", "iq4"],
-    ["alu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu2",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu3",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu4",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu5",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["fpu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["fpu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["br0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["br1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["lsu",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq2",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq3",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq4",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"]]
-
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",      "alu0", "alu1", "alu2", "alu3", "alu4", "alu5", "fpu0", "fpu1", "br0",  "br1",  "lsu",  "iq0",  "iq1",  "iq2",  "iq3", "iq4"],
-    ["alu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu2",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu3",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu4",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["alu5",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["fpu0",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["fpu1",  "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["br0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["br1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["lsu",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq0",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq1",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq2",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq3",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"],
-    ["iq4",   "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",    "1",   "1",    "1",    "1",    "1",    "1",    "1"]]
-
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1]]
