--- a/test/core/dispatch/test_cores/test_medium_core.yaml
+++ b/test/core/dispatch/test_cores/test_medium_core.yaml
@@ -3,54 +3,38 @@
 #
 
 top.extension.core_extensions:
-  execution_topology:
-  [["alu", "3"],
-   ["fpu", "2"],
-   ["br",  "1"]]
-  pipe_topology_alu_pipes:
-    [["int", "mul", "i2f", "cmov"],
+  pipelines:
+    [
+      ["int", "mul", "i2f", "cmov"],
       ["int", "div"],
-      ["int"]]
-  pipe_topology_br_pipes:
-    [["br"]]
-  pipe_topology_fpu_pipes:
-    [["float", "faddsub", "fmac"], ["float", "f2i"]]
-  issue_queue_topology:
-    [["alu0", "alu1"],
-     ["alu2"],
-     ["fpu0", "fpu1"],
-     ["br0"]]
+      ["int"],
+      ["float", "faddsub", "fmac"], 
+      ["float", "f2i"],
+      ["br"]
+    ]
+  issue_queue_to_pipe_map:
+  [ 
+    ["0"],
+    ["1", "2"],
+    ["3", "4"],
+    ["5"]
+  ]
 
 top.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0", "lsu", "iq0", "iq1", "iq2", "iq3"], 
-    ["alu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["alu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["alu2",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["br0",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["lsu",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"],
-    ["iq0",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"],
-    ["iq1",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"],
-    ["iq2",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"],
-    ["iq3",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"]]
-
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0", "lsu", "iq0", "iq1", "iq2", "iq3"], 
-    ["alu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["alu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["alu2",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["br0",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"], 
-    ["lsu",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"],
-    ["iq0",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"],
-    ["iq1",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"],
-    ["iq2",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"],
-    ["iq3",     "1",    "1",    "1",    "1",    "1",   "1",  "1",   "1",   "1",   "1",   "1"]]
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
