--- a/test/core/lsu/test_cores/test_medium_core_full.yaml
+++ b/test/core/lsu/test_cores/test_medium_core_full.yaml
@@ -14,33 +14,38 @@ top.cpu.core0:
     l1_size_kb: 32
 
 top.cpu.core0.extension.core_extensions:
-  execution_topology:
-  [["alu", "3"],
-   ["fpu", "2"],
-   ["br",  "1"]]
+  pipelines:
+    [
+      ["int", "mul", "i2f", "cmov"],
+      ["int", "div"],
+      ["int"],
+      ["float", "faddsub", "fmac"], 
+      ["float", "f2i"],
+      ["br"]
+    ]
+  issue_queue_to_pipe_map:
+  [ 
+    ["0"],
+    ["1", "2"],
+    ["3", "4"],
+    ["5"]
+  ]
 
 top.cpu.core0.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0", "lsu"], 
-    ["alu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["alu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["alu2",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["br0",     "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["lsu",     "1",    "1",    "1",    "1",    "1",   "1",  "1"]]
-
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0", "lsu"], 
-    ["alu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["alu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["alu2",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["br0",     "1",    "1",    "1",    "1",    "1",   "1",  "1"], 
-    ["lsu",     "1",    "1",    "1",    "1",    "1",   "1",  "1"]]
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
