--- a/test/core/lsu/test_cores/test_medium_core.yaml
+++ b/test/core/lsu/test_cores/test_medium_core.yaml
@@ -6,28 +6,38 @@
 #  dispatch.num_to_dispatch: 2
 
 top.extension.core_extensions:
-  execution_topology:
-    [["alu", "2"],
-     ["fpu", "2"],
-     ["br",  "2"]]
+  pipelines:
+    [
+      ["int", "mul", "i2f", "cmov"],
+      ["int", "div"],
+      ["int"],
+      ["float", "faddsub", "fmac"], 
+      ["float", "f2i"],
+      ["br"]
+    ]
+  issue_queue_to_pipe_map:
+  [ 
+    ["0"],
+    ["1", "2"],
+    ["3", "4"],
+    ["5"]
+  ]
+
 top.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0"],   # <-- TO
-     ["alu0",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["alu1",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["alu2",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["br0",     "1",    "1",    "1",    "1",    "1",   "1"]]
-
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",     "alu0", "alu1", "alu2", "fpu0", "fpu1", "br0"],   # <-- TO
-     ["alu0",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["alu1",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["alu2",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["fpu0",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["fpu1",    "1",    "1",    "1",    "1",    "1",   "1"],
-     ["br0",     "1",    "1",    "1",    "1",    "1",   "1"]]
+      [["",      "lsu", "iq0", "iq1", "iq2", "iq3"],
+      ["lsu",    1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1]]
