--- a/test/core/rename/test_cores/test_small_core.yaml
+++ b/test/core/rename/test_cores/test_small_core.yaml
@@ -3,42 +3,32 @@
 #
 
 top.extension.core_extensions:
-  execution_topology:
-    [["alu", "1"],
-     ["fpu", "1"],
-     ["br",  "1"]]
-  pipe_topology_alu_pipes:
-    [["int", "mul", "i2f", "cmov", "div"]]
-  pipe_topology_br_pipes:
-    [["br"]]
-  pipe_topology_fpu_pipes:
-    [["float", "faddsub", "fmac", "f2i"]]
-      # 6 alu issue queues
-  issue_queue_topology:
-    [["alu0"],
-     ["fpu0"],
-     ["br0"]]
+  pipelines:
+    [
+      ["int", "mul", "i2f", "cmov", "div"],
+      ["float", "faddsub", "fmac", "f2i"], 
+      ["br"]
+    ]
+  issue_queue_to_pipe_map:
+  [ 
+    ["0"],
+    ["1"],
+    ["2"]
+  ]
 
 top.rename.scoreboards:
   # From
   # |
   # V
   integer.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0", "lsu", "iq0", "iq1", "iq2"],   # <-- TO
-     ["alu0",    "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["fpu0",    "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["br0",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["lsu",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["iq0",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["iq1",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["iq2",     "1",    "1",   "1",   "1",   "1",   "1",   "1"]]
-
+      [["",      "lsu", "iq0", "iq1", "iq2"],
+      ["lsu",    1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1]]
   float.params.latency_matrix: |
-    [["",     "alu0", "fpu0", "br0", "lsu", "iq0", "iq1", "iq2"],   # <-- TO
-     ["alu0",    "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["fpu0",    "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["br0",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["lsu",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["iq0",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["iq1",     "1",    "1",   "1",   "1",   "1",   "1",   "1"],
-     ["iq2",     "1",    "1",   "1",   "1",   "1",   "1",   "1"]]
+      [["",      "lsu", "iq0", "iq1", "iq2"],
+      ["lsu",    1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1]]
